# r-containers

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.qmd  build_images.py  convert_singularity.sh  cp_imgs.sh  docker-compose.yml  docker_to_sing.py  fastCRAN.r  get_imgs.py  images.json  make-dockerfiles.R  make.sh  push.sh  pyproject.toml  registry.md  rocker.sh  template.yml  test.md  test.py  test.sh  update.py  write-compose.R
.claude/: settings.local.json
bakefiles/: bakefile.json  bakefile_amd.json  bakefile_arm.json
compose/: ppca.yml  r-3.6.3.yml  r-4.0.0.yml  r-4.0.2.yml  rmd.yml
dockerfiles/: Dockerfile_myenv_3.6.3  Dockerfile_myenv_4.0.0  Dockerfile_myenv_4.0.2  Dockerfile_ppca_3.6.3  Dockerfile_ppca_4.0.0  Dockerfile_ppca_4.0.2  Dockerfile_rmd_3.6.3  Dockerfile_rmd_4.0.0  Dockerfile_rmd_4.0.2  Dockerfile_rstan_3.6.3  Dockerfile_rstan_4.0.0
myenv/: Makefile  latest.Dockerfile
ppca/: Dockerfile  Makefile  latest.Dockerfile
rmd/: Makefile  latest.Dockerfile
rstan/: Makefile  latest.Dockerfile
scripts/: .radian_profile  bake_arm.sh  build_and_push.sh  buildx.sh  cn_mirror.sh  generate_bake.py  generate_yml.py  install_crossref.sh  install_deps.sh  install_myenv.sh  install_ppca.sh  install_python.sh  install_renv.sh  install_rmd.sh  install_stan.sh  linux_mirror.sh  pull_from_pr.sh  pull_from_private.sh  push.sh  push_to_pr.sh  push_to_private.sh  update.py  usrconf.sh
stacks/: ppca.json  r-3.6.3.json  r-4.0.0.json  r-4.0.2.json  rmd.json
templates/: Dockerfile.jinja  Makefile.jinja  bakefile_template.jinja  (+2 more)
(+438 files in other folders)
