[tool.poetry]
name = "r-containers"
version = "0.1.0"
description = ""
authors = ["Masatoshi Katabuchi <mattocci27@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
"ruamel.yaml" = "^0.17.16"
pyyaml = "^6.0"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
